--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Your awesome title
+title: Casual inference
 author: GitHub User
 email: your-email@domain.com
 description: > # this means to ignore newlines until "twitter_username:"
@@ -7,9 +7,9 @@ description: > # this means to ignore newlines until "twitter_username:"
   Google search results) and in your feed.xml site description.
 
 # social links
-twitter_username: jekyllrb
-github_username:  jekyll
-rss: rss
+#twitter_username: jekyllrb
+#github_username:  jekyll
+#rss: rss
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
@@ -37,7 +37,8 @@ minima:
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
 #header_pages:
-# - about.html
+ - about.html
+ - contact.html
 
 # Build settings
 markdown: kramdown
