--- a/_config.yml
+++ b/_config.yml
@@ -37,8 +37,8 @@ minima:
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
 header_pages:
-  - about.html
-  - contact.html
+  - about.md
+  - contact.md
 
 # Build settings
 markdown: kramdown
